# Mercat-rio-Backend-Challenge

./: README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
api_mock/: Dockerfile  api_mock.py
app/: alembic.ini  main.py
app/core/: config.py  database.py
app/middlewares/: certidao.py  creador.py  documento.py  precatorio.py
app/migrations/: env.py
app/models/: base.py  certidao.py  creador.py  documento.py  precatorio.py
app/routes/: auth.py  credores.py
app/services/: certidoes.py
app/use_cases/: certidao.py  credor.py  documento.py  interface.py  precatorio.py
