[project]
name = "mercatoriobackendchallenge"
version = "0.1.0"
description = "Teste Backend feito em FastAPI para a Mercatório"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "faker>=37.3.0",
]
